@@ -30,7 +30,7 @@
             
             <div tal:replace="structure provider:plone.abovecontentbody" />
             
-            <p tal:replace="structure here/thanksPrologue | nothing" />
+            <p tal:replace="structure here/getThanksPrologue | nothing" />
             
             <blockquote>
                 <dl>
@@ -41,7 +41,7 @@
                 </dl>
             </blockquote>
             
-            <p tal:replace="structure here/thanksEpilogue | nothing" />
+            <p tal:replace="structure here/getThanksEpilogue | nothing" />
 
         </div>
 
